--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-          apiKey: "AIzaSyCKcbIf8F34-LUvEaRbqPqRhmzYLyNDHwc",
-          authDomain: "flintstones-mind-game.firebaseapp.com",
-          projectId: "flintstones-mind-game",
-          storageBucket: "flintstones-mind-game.appspot.com",
-          messagingSenderId: "133760944039",
-          appId: "1:133760944039:web:1cce6b48daf5776f081882",
-          measurementId: "G-M58YF5M0NF"
+          apiKey: "AIzaSyBYlJAzeKQRBhy5KLARdGy4SlxBy4IYVxg",
+          authDomain: "flintstone-mind-game.firebaseapp.com",
+          projectId: "flintstone-mind-game",
+          storageBucket: "flintstone-mind-game.appspot.com",
+          messagingSenderId: "378645501005",
+          appId: "1:378645501005:web:32877449505febbca0f804",
+          measurementId: "G-FFR409EEFK"
         };
       
         // Initialize Firebase
